<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/margin_16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_user_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:civ_border_width="1dp"
            android:layout_margin="16dp"
            app:civ_border_color="#FF000000"
            android:src="@drawable/ic_instagram_black"/>

        <LinearLayout
            android:id="@+id/post_user_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/post_user_image"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/post_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_user_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/post_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:text="@string/string_no_available"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/string_post_image"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <ImageView
            android:id="@+id/post_like_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border_black_24dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"/>
        <ImageView
            android:id="@+id/post_comments_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chat_bubble_outline_black_24dp"
            android:layout_toEndOf="@+id/post_like_icon"
            android:layout_marginStart="16dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send_black_24dp"
            android:layout_toEndOf="@+id/post_comments_icon"
            android:layout_marginStart="16dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bookmark_border_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/post_likes_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_gravity="center_vertical">
        <TextView
            android:id="@+id/post_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_likes"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/post_user_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:textAppearance="?attr/textAppearanceListItem" />

    <LinearLayout
        android:id="@+id/post_comments_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/string_view_all"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/post_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/string_comments"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

</LinearLayout>
